add settings.yaml paths to constants.backend.serialization.path

--- a/components/serial/settings.yaml
+++ b/components/serial/settings.yaml
@@ -1,18 +1,18 @@
 valuation:
-  inputs: 
+  style: 'American'
+  type: 'OTM'
+  output: 'Value'
+  factors: 
     spot_price: 100
     interest_rate: 0.05
     carry_rate: 0.05
     volatility: 0.15
-    option_type: 'American'
   dimensions: 
     strikes: 
-      - 90
-      - 95
-      - 100
-      - 105
-      - 110
+      min: 90
+      incr: 0.5
+      max: 110
     expirations:
-      - 30
-      - 60
-      - 90
+      min: 30
+      incr: 30
+      max: 300
