--- a/requirements.txt
+++ b/requirements.txt
@@ -2,16 +2,16 @@ astroid==1.6.5
 backports.functools-lru-cache==1.5
 colorama==0.3.9
 configparser==3.5.0
+Cython==0.28.5
 enum34==1.1.6
 futures==3.2.0
 isort==4.3.4
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
 numpy==1.15.0
-psutil==5.4.6
 pylint==1.9.3
-PyQt4==4.11.4
-PyYAML==3.13
+rope==0.11.0
 singledispatch==3.4.0.3
 six==1.11.0
+virtualenv==16.0.0
 wrapt==1.10.11
