--- a/requirements.txt
+++ b/requirements.txt
@@ -2,19 +2,25 @@ astroid==1.6.5
 backports.functools-lru-cache==1.5
 colorama==0.3.9
 configparser==3.5.0
+cycler==0.10.0
 Cython==0.28.5
 enum34==1.1.6
 futures==3.2.0
 isort==4.3.4
+kiwisolver==1.0.1
 lazy-object-proxy==1.3.1
+matplotlib==2.2.3
 mccabe==0.6.1
 numpy==1.15.0
 psutil==5.4.6
 pylint==1.9.3
 PyOpenGL==3.1.0
 PyOpenGL-accelerate==3.1.0
+pyparsing==2.3.0
 PyQt4==4.11.4
 pyqtgraph==0.10.0
+python-dateutil==2.7.5
+pytz==2018.7
 PyYAML==3.13
 singledispatch==3.4.0.3
 six==1.11.0
